gcc/testsuite/gfortran.dg/binding_label_tests_30.f90
! { dg-do compile }
! Make sure this error is flagged.
subroutine foo() ! { dg-error "is already being used as a SUBROUTINE" }
end subroutine foo

subroutine bar() bind(C,name="foo") ! { dg-error "is already being used as a SUBROUTINE" }
end subroutine bar
